# pressio-templates-usage-as-library

./: README.md  main.cpp  main_with_defines.cpp
.github/workflows/: ci-baseline.yml
cmake_include_directories/: CMakeLists.txt
